<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.scottie.winedb.AddFragmentScreen3">
<TableLayout  android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:id="@+id/overall_layout">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayout01">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_label"
            android:id="@+id/nextButton01"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notes_label"
            android:id="@+id/notesLabel"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/notesField"
            android:inputType="textCapSentences|textMultiLine"
            android:layout_weight="1"
            android:hint="@string/optional_hint"/>

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar"
            android:stepSize="0.5"
            android:numStars="5"
            android:rating="0"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price_paid_label"
            android:id="@+id/pricePaidLabel"/>
    </LinearLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TableRow01"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dollar_label"
            android:id="@+id/dollarLabel"
            android:textSize="18sp"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/pricePaidField"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_marginRight="10dp"
            android:hint="@string/optional_hint"
            android:inputType="numberDecimal"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Add Bottle Image"
            android:id="@+id/addImageButton"
            android:layout_weight="0.65"
            android:width="0dp"
            android:layout_marginBottom="5dp"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TableRow02">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinking_range_from_label"
            android:id="@+id/drinkFromLabel"
            android:width="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/drinking_range_to_label"
            android:id="@+id/drinkToLabel"
            android:width="0dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TableRow03">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinkFromField"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/optional_hint"
            android:inputType="number"
            android:maxLength="4"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/drinkToField"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/optional_hint"
            android:inputType="number"
            android:maxLength="4"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TableRow04">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_bought_label"
            android:id="@+id/yearBoughtLabel"
            android:width="0dp"
            android:layout_weight="1"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/percent_alcohol_label"
            android:id="@+id/percentAlcoholLabel"
            android:width="0dp"
            android:layout_weight="1"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/TableRow05">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/yearBoughtField"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/optional_hint"
            android:inputType="number"
            android:maxLength="4"
            />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/percentAlcoholField"
            android:width="0dp"
            android:layout_weight="1"
            android:layout_gravity="center_vertical"
            android:hint="@string/optional_hint"
            android:inputType="numberDecimal"
            android:maxLength="5"/>
    </TableRow>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/LinearLayout02">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/finish_label"
            android:id="@+id/nextButton02"
            android:width="0dp"
            />
    </LinearLayout>

</TableLayout>
</ScrollView>